# PixelRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  README.md
include/PixelRenderer/: Font.hpp  Geometry.hpp  Loader.hpp  Renderer.hpp  Texture.hpp  Unicode.hpp
src/: Color.cpp  Font.cpp  FontManager.cpp  Geometry.cpp  Renderer.cpp  String32.cpp  Texture.cpp  TextureLoader.cpp  TextureManager.cpp  UTFLoader.cpp
src/Test/: Main.cpp  stbTest.cpp
src/Test/Animation/: Anim1Shapes.cpp  Anim2Textures.cpp  Anim3Blending.cpp  Anim4Repetition.cpp  Anim5Fonts.cpp  Anim6Sprite.cpp  AnimFunctions.cpp  AnimPart.hpp  AnimTest.cpp  AnimTest.hpp  MemoryDump.hpp
src/Test/stb/: stbTest.cpp
